--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "league/commonmark": "^2.4"
+        "league/commonmark": "^2.4",
+        "spatie/laravel-multitenancy": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
